# pj-suml-project

./: .gitignore  Dockerfile  Makefile  README.md  conda.yml  data_prep.py  environment.yml  main.py  pyproject.toml  requirements.txt
analytics/wandb/: init_wandb.py
api/: README.md  main.py  model.py  schemas.py
conf/base/: catalog.yml  parameters.yml
docker/: docker-compose.yml
docker/api/: Dockerfile  requirements.txt
docker/kedro/: Dockerfile  requirements.txt
docker/model/: Dockerfile  flask_server.py  requirements.txt
docker/ui/: Dockerfile
docs/: conda_environment.md
helpers/: parse_args.py
kedro/pja-asi-12c-gr3/: .gitignore  README.md
kedro/pja-asi-12c-gr3/src/pja_asi_12c_gr3/: __main__.py  settings.py
machine_learning/: machine_learning.py
machine_learning/data/: data_cleaner.py  data_loader.py  data_splitter.py
machine_learning/model/: model_deployment.py  model_evaluator.py  model_trainer.py  model_validator.py
src/pj-suml-project/: __init__.py  __main__.py  hooks.py  settings.py
src/pj-suml-project/pipelines/automl/: nodes.py  pipeline.py
src/pj-suml-project/pipelines/champion_challenger/: nodes.py  pipeline.py
src/pj-suml-project/pipelines/data_preparation/: nodes.py  pipeline.py
src/pj-suml-project/pipelines/model_deployment/: nodes.py  pipeline.py
src/pj-suml-project/pipelines/model_training/: nodes.py  pipeline.py
src/pj-suml-project/utils/: wandb_metrics.py
src/pja_asi_12c_gr3/: __init__.py  hooks.py  pipeline_registry.py  settings.py
src/pja_asi_12c_gr3/pipelines/automl/: nodes.py
ui/: README.md  main.py
(+10 files in other folders)
