[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "pja_asi_12c_gr3"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
pja-asi-12c-gr3 = "pja_asi_12c_gr3.__main__:main"

[tool.kedro]
package_name = "pja_asi_12c_gr3"
project_name = "PJA_ASI_12c_GR3"
kedro_init_version = "0.19.4"
tools = [ "None",]
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "pja_asi_12c_gr3.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false
