[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "pj-suml-project"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
pj-suml-project = "pj-suml-project.__main__:main"

[tool.kedro]
package_name = "pj-suml-project"
project_name = "pj-suml-project"
kedro_init_version = "0.19.4"
tools = [ "None",]
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "pj-suml-project.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false
